--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 .jumbotron {
   padding: 2rem 1rem;
-  background-color: #51769b;
   background: url("https://ecs7.tokopedia.net/blog-tokopedia-com/uploads/2021/08/Featured_Laptop-Tipis.jpg") no-repeat center center;
   background-size: cover;
   color: #f5f8fa;
+  padding-top: 10%;
+  padding-bottom: 10%;
 }
 
 .product {
   background-color: #f8f9fa;
+}
+t
 }
